# HOI4-MCP

./: .gitignore  AGENTS.md  Dockerfile  INDEXER-GAP-FIX-PROPOSAL.md  LICENSE  PARSER-SCRIPTED-GUI-AUDIT.md  PROJECT-AUDIT.md  README.md  SKILL.md  TEST-RESULTS.md  hoi4-modder.agent.md
.agents/checklists/: README.md  hoi4_asset_source_researcher.md  hoi4_audio_researcher.md  hoi4_country_package_auditor.md  hoi4_decision_mission_auditor.md  hoi4_documentation_curator.md  hoi4_feature_completion_auditor.md  hoi4_focus_tree_auditor.md  hoi4_generated_feature_art.md  hoi4_icon_artist.md  hoi4_improvement_loop_planner.md  hoi4_localisation_auditor.md  hoi4_quote_remark_researcher.md  hoi4_repo_explorer.md  hoi4_scripted_system_architect.md  (+2 more)
docs/: SETUP.md  USAGE.md
hoi4-mcp-server/: README.md  pyproject.toml
hoi4-mcp-server/scripts/: setup.sh
hoi4-mcp-server/src/hoi4_mcp/: __init__.py  assembly.py  server.py
hoi4-mcp-server/src/hoi4_mcp/clausewitz/: __init__.py  parser.py  validator.py
hoi4-mcp-server/src/hoi4_mcp/db/: __init__.py  vanilla_index.py
hoi4-mcp-server/src/hoi4_mcp/learning/: __init__.py  db.py  detector.py  exporter.py  rules.py  seeder.py
hoi4-mcp-server/src/hoi4_mcp/sessions/: __init__.py  index.py  models.py  store.py
hoi4-mcp-server/src/hoi4_mcp/tools/: __init__.py  compaction.py  error_log.py  fuzzy_replace.py  id_manager.py  indexer.py  loop.py  packager.py  report.py  skill_tool.py
hoi4-mcp-server/tests/: test_clausewitz.py  test_learning.py  test_validator.py
paradox_wiki/: INDEX.md
scripts/: generate_banner.py  generate_gear_gif.py
(+18 files in other folders)
